# EPICS-MCP-Server

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: langchain_mcp_client_sse.py  langchain_mcp_client_stdiot.py
sandbox/: .gitattributes  ISOLATION-PLAN.md  README.md  connect_proxy.py  docker-compose.yml  fetch_alarm_artifacts.sh  fetch_archiver_artifact.sh
sandbox/alarm/: config.xml
sandbox/alarm-logger/: Dockerfile
sandbox/alarm-server/: Dockerfile
sandbox/archiver/: Dockerfile  appliances.xml  archappl.properties  context-empty.xml  context-mgmt.xml  create_archappl_tables.sql  entrypoint.sh  server.xml.tmpl  site_policies.py
sandbox/channelfinder/: Dockerfile
sandbox/ioc-e3/: .gitattributes  .gitignore  Dockerfile  evr-records.txt  fbis-dln01-evr-full.db  fbis-dln01-evr.db  gen_evr_full_db.py  st.cmd
sandbox/mock-naming/: Dockerfile  server.py
sandbox/recceiver/: .gitattributes  Dockerfile  channelfinderapi.conf  docker.conf
sandbox/recceiver/patches/: cfstore.patch  channelowner.patch  expandvars.patch  pyproj.patch
sandbox/seed/: archive_evr_pvs.py  seed_channelfinder.py
src/epics_pv_mcp/: __init__.py  cli_coverage.py  cli_crossplane.py  cli_diagnose.py  config.py  errors.py  paths.py  prompts.py  resources.py  safety.py  server.py
src/epics_pv_mcp/services/: alarm_client.py  alarm_exceptions.py  archiver_client.py  archiver_exceptions.py  bob_pvs.py  channelfinder_client.py  channelfinder_exceptions.py  coverage.py  crossplane.py  device_lookup.py  diagnose.py  e3_db.py  epics_client.py  inventory_adapter.py  naming_client.py  naming_exceptions.py
src/epics_pv_mcp/tools/: alarm.py  archiver.py  channelfinder.py  coverage_audit.py  crossplane.py  diagnose_connection.py  discover.py  find_device.py  info.py  monitor.py  read.py  validate.py  write.py
tests/: conftest.py  test_alarm.py  test_archiver.py  test_bob_pvs.py  test_channelfinder.py  test_config.py  test_coverage.py  test_coverage_tool.py  test_crossplane.py  test_crossplane_tool.py  test_device_lookup.py  test_diagnose.py  test_discover.py  test_e3_db.py  test_epics_client.py  test_find_device_tool.py  test_info.py  test_inventory_adapter.py  test_live_sandbox.py  test_monitor.py  test_naming.py  test_paths.py  test_prompts.py  test_read.py  test_resources.py  test_safety.py  test_sandbox_db_asg.py  test_sandbox_evr_gen.py  test_server.py  test_validate.py  test_write.py
