[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epics-pv-mcp"
version = "0.2.0"
description = "MCP Server for EPICS PV access via p4p (PVAccess + Channel Access)"
requires-python = ">=3.12"
dependencies = [
    # mcp ist eine DIREKTE Dependency (server.py: mcp.server.fastmcp.FastMCP +
    # mcp.types.ToolAnnotations), nicht nur transitiv über fastmcp.
    "mcp>=1.0,<2",
    "fastmcp>=3.4.2,<4",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "p4p>=4.2.0,<5",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
epics-pv-mcp = "epics_pv_mcp.server:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
asyncio_mode = "auto"
