[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epics-pv-mcp"
version = "0.2.0"
description = "MCP Server for EPICS PV access via p4p (PVAccess + Channel Access)"
requires-python = ">=3.12"
dependencies = [
    # mcp ist eine DIREKTE Dependency (server.py: mcp.server.fastmcp.FastMCP +
    # mcp.types.ToolAnnotations), nicht nur transitiv über fastmcp.
    "mcp>=1.0,<2",
    "fastmcp>=3.4.2,<4",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "p4p>=4.2.0,<5",
    # requests: read-only HTTP client for the ESS Naming Service (vendored naming_client).
    "requests>=2.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7.0",
    "ruff>=0.15",
    "mypy>=1.19",
    "pre-commit>=4.0",
]

[project.scripts]
epics-pv-mcp = "epics_pv_mcp.server:main"
epics-crossplane = "epics_pv_mcp.cli_crossplane:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Regelsatz nach MCP-Parität (phoebus-display-mcp): BLE = blinde except Exception,
# T20 = kein print() (stdout ist der JSON-RPC-Kanal des stdio-Servers).
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF", "PERF", "ANN", "BLE", "T20"]
# Deutsche Typografie in Kommentaren/Docstrings ist Projekt-Konvention — keine
# "ambiguous unicode"-Funde für Gedankenstrich, typografische Anführungszeichen, Apostroph.
allowed-confusables = ["–", "—", "„", "“", "”", "’", "‚", "‘", "×"]

[tool.ruff.lint.per-file-ignores]
# Annotations-Pflicht gilt für src/; in Tests erzwingt mypy --strict die Annotationen,
# ruff lässt sie aus (MCP-Parität).
"tests/**" = ["ANN"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# p4p ist untypisiert (keine Stubs); phoebus_mcp_core ist ein optionaler Lazy-Import
# in tools/validate.py und im EPICS-venv nicht installiert.
[[tool.mypy.overrides]]
module = ["p4p.*", "p4p", "phoebus_mcp_core.*", "requests", "requests.*", "urllib3", "urllib3.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
asyncio_mode = "auto"
