[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epics-pv-mcp"
version = "0.2.0"
description = "MCP Server for EPICS PV access via p4p (PVAccess + Channel Access)"
requires-python = ">=3.12"
dependencies = [
    # mcp ist eine DIREKTE Dependency (server.py: mcp.server.fastmcp.FastMCP +
    # mcp.types.ToolAnnotations), nicht nur transitiv über fastmcp.
    "mcp>=1.0,<2",
    "fastmcp>=3.4.2,<4",
    # pydantic>=2.11: Floor von opi_navigation (s.u.); uv erzwingt den Schnitt ohnehin,
    # hier explizit zur Intent-Klarheit.
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.0,<3",
    "p4p>=4.2.0,<5",
    # requests: read-only HTTP client for the ESS Naming Service (vendored naming_client).
    "requests>=2.25",
    # Cross-Plane-Join (Wedge 1): die makro-expandierten Per-Instanz-PVs eines Displays
    # kommen aus dem Skill-Paket opi_navigation (EINE PV-Engine, Build-once EX/EY) — NICHT
    # makro-blind nachgebaut. SHA-gepinnt wie der phoebus-MCP (cs-studio-phoebus-mcp);
    # Bump = Pin + `uv lock` (CI fährt `uv sync --frozen`). Skill bleibt standalone.
    "opi-navigation @ git+https://github.com/epicDirk/opi-foundry.git@8fad86766891aeac177050449f73a3a4fbf554cc",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7.0",
    "ruff>=0.15",
    "mypy>=1.19",
    "pre-commit>=4.0",
]

[project.scripts]
epics-pv-mcp = "epics_pv_mcp.server:main"
epics-crossplane = "epics_pv_mcp.cli_crossplane:main"

# Git-Direct-Reference (opi-navigation) erfordert dieses Flag bei hatchling — sonst
# bricht der Metadaten-Build ("Dependency ... cannot be a direct reference"). Spiegelt
# cs-studio-phoebus-mcp.
[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Regelsatz nach MCP-Parität (phoebus-display-mcp): BLE = blinde except Exception,
# T20 = kein print() (stdout ist der JSON-RPC-Kanal des stdio-Servers).
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF", "PERF", "ANN", "BLE", "T20"]
# Deutsche Typografie in Kommentaren/Docstrings ist Projekt-Konvention — keine
# "ambiguous unicode"-Funde für Gedankenstrich, typografische Anführungszeichen, Apostroph.
allowed-confusables = ["–", "—", "„", "“", "”", "’", "‚", "‘", "×"]

[tool.ruff.lint.per-file-ignores]
# Annotations-Pflicht gilt für src/; in Tests erzwingt mypy --strict die Annotationen,
# ruff lässt sie aus (MCP-Parität).
"tests/**" = ["ANN"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# p4p ist untypisiert (keine Stubs).
[[tool.mypy.overrides]]
module = ["p4p.*", "p4p", "requests", "requests.*", "urllib3", "urllib3.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
asyncio_mode = "auto"
# `live` = Tests gegen eine laufende lokale EPICS-Sandbox (sandbox/docker-compose).
# Opt-in: `EPICS_SANDBOX=1 uv run pytest -m live`. Bewusst KEIN `addopts = -m "not live"`
# (würde das Default-pytest für alle ändern + ist brüchig); die Live-Tests skippen
# stattdessen selbst via skipif(EPICS_SANDBOX) -> Default-Lauf/CI bleibt ohne Sandbox grün.
markers = [
    "live: needs a running local EPICS sandbox (sandbox/docker-compose); opt-in via -m live + EPICS_SANDBOX=1",
]
